feat: update easymock to 5.2.0-1